kyverno-policies/tests/policies/policies/prevent-istio-injection-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-ns-istio-injection
  annotations:
    policies.kyverno.io/title: Prevent Istio Injection Label
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      This policy prevents the istio-injection=enabled label from being set on any
      Namespace with name beginning with "at", or any Pod or Deployment in namespaces beginning with "at".
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-namespace-resources
      match:
        any:
        - resources:
            kinds:
            - Namespace
      validate:
        message: "Setting the istio-injection=enabled label is not allowed on namespaces beginning with 'at'"
        deny:
          conditions:
            all:
            - key: "{{ request.object.metadata.name }}"
              operator: StartsWith
              value: "at"
            - key: "{{ request.object.metadata.labels.\"istio-injection\" || '' }}"
              operator: Equals
              value: "enabled"
              
    - name: check-pod-deployment-resources
      match:
        any:
        - resources:
            kinds:
            - Pod
            - Deployment
            namespaces:
              - at*
      exclude:
        any:
        - resources:
            namespaces:
            - "policies-test-spot"
            - "policies-test-istio-rev"
      validate:
        message: "Setting the istio-injection=enabled label is not allowed in namespaces beginning with 'at'"
        pattern:
          metadata:
            labels:
              =(istio-injection): "!enabled"
