kyverno-policies/tests/policies/resources/istio-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace-pass
  labels:
    istio-injection: "disabled"
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace-fail
  labels:
    istio-injection: enabled
