kyverno-policies/tests/policies/resources/pod-container-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-container-registry
  namespace: app1
spec:
  containers:
  - name: nginx
    image: container-registry.xxx.net/nginx:1.19.0
