kyverno-policies/tests/policies/resources/pod-docker-io.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-docker-io
  namespace: app1
spec:
  containers:
  - name: nginx
    image: docker.io/nginx:1.19.0
