kyverno-policies/tests/policies/tests/all-tests.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-all-policies
policies:
  - ../policies/resource-limits-policy.yaml
  - ../policies/prevent-istio-injection-policy.yaml
  - ../policies/mutate-cluster-namespace-istiolabel-policy.yaml
  - ../policies/mutate-ns-deployment-spotaffinity-policy.yaml
  - ../policies/audit-cluster-peerauthentication-mtls-policy.yaml
  - ../policies/check-deprecated-apis-policy.yaml
  - ../policies/validate-virtualservice-policy.yaml
resources:
  - ../resources/resource.yaml
  - ../resources/istio-resources.yaml
  - ../resources/istio-label-resources.yaml
  - ../resources/spot-affinity-resources.yaml
  - ../resources/mtls-resources.yaml
  - ../resources/deprecated-api-resources.yaml
  - ../resources/virtual-service.yaml
variables: ../values.yaml
results:
  # VirtualService Tests
  - policy: validate-virtualservice
    rule: check-virtualservice-config
    resources:
      - test-virtualservice-pass
    kind: VirtualService
    result: pass
  - policy: validate-virtualservice
    rule: check-virtualservice-config
    resources:
      - test-virtualservice-fail
    kind: VirtualService
    result: fail

  # Resource Limits Tests
  - policy: require-resource-limits
    rule: check-resource-limits
    resources:
      - test-deployment-pass
    kind: Deployment
    result: pass

  # Prevent Istio Injection Tests
  - policy: validate-ns-istio-injection
    rule: check-istio-injection-label
    resources:
      - test-namespace-pass
    kind: Namespace
    result: pass
  - policy: validate-ns-istio-injection
    rule: check-istio-injection-label
    resources:
      - test-namespace-fail
    kind: Namespace
    result: fail

  # Istio Label Mutation Tests
  - policy: mutate-cluster-namespace-istiolabel
    rule: add-istio-revision-label
    resources:
      - test-namespace-1
    kind: Namespace
    result: pass
    patchedResource: ../patched/patched-namespace-1.yaml
  - policy: mutate-cluster-namespace-istiolabel
    rule: add-istio-revision-label
    resources:
      - test-namespace-2
    kind: Namespace
    result: pass
    patchedResource: ../patched/patched-namespace-2.yaml

  # Spot Affinity Tests
  - policy: mutate-ns-deployment-spotaffinity
    rule: insert-pod-antiaffinity
    resources:
      - test-deployment-1
    kind: Deployment
    result: pass
    patchedResource: ../patched/patched-deployment-1.yaml
  - policy: mutate-ns-deployment-spotaffinity
    rule: insert-pod-antiaffinity
    resources:
      - test-deployment-2
    kind: Deployment
    result: skip

  # mTLS Tests
  - policy: audit-cluster-peerauthentication-mtls
    rule: validate-mtls
    resources:
      - test-peer-auth-pass
    kind: PeerAuthentication
    result: pass
  - policy: audit-cluster-peerauthentication-mtls
    rule: validate-mtls
    resources:
      - test-peer-auth-fail
    kind: PeerAuthentication
    result: fail

  # Deprecated APIs Tests for 1.30 and 1.31
  - policy: check-deprecated-apis
    rule: validate-v1-30-removals
    resources:
      - test-cronjob-deprecated
    kind: CronJob
    result: fail
  - policy: check-deprecated-apis
    rule: validate-v1-30-removals
    resources:
      - test-hpa-v2beta1-deprecated
    kind: HorizontalPodAutoscaler
    result: fail
  - policy: check-deprecated-apis
    rule: validate-v1-30-removals
    resources:
      - test-endpointslice-deprecated
    kind: EndpointSlice
    result: fail
  - policy: check-deprecated-apis
    rule: validate-v1-30-removals
    resources:
      - test-storage-deprecated
    kind: CSIStorageCapacity
    result: fail
  - policy: check-deprecated-apis
    rule: validate-v1-31-removals
    resources:
      - test-ingress-deprecated
    kind: Ingress
    result: fail
  - policy: check-deprecated-apis
    rule: validate-v1-31-removals
    resources:
      - test-ingress-valid
    kind: Ingress
    result: pass
  - policy: check-deprecated-apis
    rule: validate-v1-31-removals
    resources:
      - test-priorityclass-deprecated
    kind: PriorityClass
    result: fail
  - policy: check-deprecated-apis
    rule: validate-v1-31-removals
    resources:
      - test-lease-deprecated
    kind: Lease
    result: fail
